# Mantis_SDK

./: .gitignore  CHANGELOG.md  README.md  openapi.json  pyproject.toml  setup.py  test.csv
.github/workflows/: ci.yml
Mantis_SDK.egg-info/: PKG-INFO
examples/: agent_run.py  create_space.py  demo.ipynb  notebook_execute.py
examples/repo_radar/: README.md  repo_radar.py  sources.py
mantis_sdk/: __init__.py  _http.py  agents.py  client.py  config.py  enums.py  exceptions.py  main.py  notebook.py  render_args.py  requirements.txt  resources.py  space.py  test.py  transport.py  utils.py
src/: client.py  config.py  main.py  requirements.txt
src/mantis_sdk/: __init__.py
tests/: conftest.py  test_agents.py  test_create_space.py  test_enums.py  test_http_client.py  test_notebook.py  test_resources.py  test_transport.py
